feat: integrate Giscus comments on posts

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -8,6 +8,7 @@ import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import ShareLinks from "@components/ShareLinks.astro";
 import { SITE } from "@config";
+import Comments from "@components/Comments";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -98,6 +99,8 @@ const layoutProps = {
 
       <ShareLinks />
     </div>
+
+    <Comments client:only />
   </main>
   <Footer />
 </Layout>
