--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -90,5 +90,30 @@
     background-image: linear-gradient(-45deg, #7fc5d974 50%, #47cbff85 50%);
     filter: blur(44px);
     position: absolute;
+    animation: pulsating 10s infinite ease-out;
+  }
+
+  @keyframes pulsating {
+    0% {
+      transform: scale(0.4);
+    }
+    10% {
+      transform: scale(0.6);
+    }
+    30% {
+      transform: scale(0.8);
+    }
+    50% {
+      transform: scale(1);
+    }
+    70% {
+      transform: scale(0.8);
+    }
+    90% {
+      transform: scale(0.6);
+    }
+    100% {
+      transform: scale(0.4);
+    }
   }
 </style>
