chore: update to nordlys@1.1.1

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,7 +33,7 @@ const { gradient, background, logo: showLogo } = Astro.props.frontmatter
             loading="eager"
             alt="Nordlys logo, a drawing of two gray mountains with green northern lights in the background"
             src={logo}
-            class="h-[48px] max-w-fit object-scale-down sm:h-24"
+            class="h-[48px] w-fit object-scale-down sm:h-24"
           />
         )
       }
