--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -20,7 +20,7 @@ const { Content } = await render()
         src={data.previewImage}
         height={208}
         alt={`${data.title} preview`}
-        class="my-auto max-h-52 w-fit rounded object-contain md:max-h-32"
+        class="my-auto max-h-52 w-fit rounded object-contain md:max-h-32 md:w-auto"
       />
     )
   }
