--- a/src/plugins/ScrollToTopPlugin.astro
+++ b/src/plugins/ScrollToTopPlugin.astro
@@ -1,5 +1,5 @@
 <scroll-top-button
-  class="!fixed bottom-20 right-2 z-10 hidden pr-2 sm:bottom-28 lg:bottom-8"
+  class="!fixed bottom-4 right-4 z-10 hidden pr-2 sm:bottom-8 sm:right-8 lg:bottom-16 lg:right-16"
 >
   <button
     class="clickable flex items-center gap-2"
