fix: decrease landing title font

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,7 +23,8 @@ const { gradient, background, logo: showLogo } = Astro.props.frontmatter
       },
       {
         'mb-2 sm:mb-8': background
-      }
+      },
+      { 'text-4xl sm:text-7xl': showLogo }
     ]}
   >
     <div class="flex items-center gap-4 sm:gap-8">
