chore: update to nordlys@2.0.0

--- a/src/components/PostsList.astro
+++ b/src/components/PostsList.astro
@@ -1,7 +1,8 @@
 ---
+import PostPreview from '@/components/PostPreview.astro'
+import Separator from '@/components/layout/Separator.astro'
 import { sortPosts } from '@/util/posts'
 import type { CollectionEntry } from 'astro:content'
-import PostPreview from './PostPreview.astro'
 
 export interface Props {
   posts: CollectionEntry<'posts'>[]
@@ -14,9 +15,10 @@ posts.sort(sortPosts)
 
 <ul class="list-none p-0">
   {
-    posts.map((post) => (
-      <li>
+    posts.map((post, index) => (
+      <li class="pl-0">
         <PostPreview {post} />
+        {index !== posts.length - 1 && <Separator class="my-6" />}
       </li>
     ))
   }
