--- a/src/components/PostPreview.astro
+++ b/src/components/PostPreview.astro
@@ -9,7 +9,7 @@ export interface Props {
   post: CollectionEntry<'posts'>
 }
 
-const { slug, data } = Astro.props.post
+const { id, data } = Astro.props.post
 ---
 
 <div class="mb-8 flex flex-col gap-4 md:mb-4 md:flex-row md:gap-8">
@@ -25,11 +25,7 @@ const { slug, data } = Astro.props.post
   }
   <div class="flex w-full flex-col gap-2">
     <div class="flex flex-col justify-between sm:flex-row sm:items-center">
-      <a
-        class="text-xl font-normal"
-        href={`/posts/${slug}`}
-        data-astro-prefetch
-      >
+      <a class="text-xl font-normal" href={`/posts/${id}`} data-astro-prefetch>
         <span>{data.title}</span>
       </a>
       <time
