--- a/src/pages/posts/[...id]/index.astro
+++ b/src/pages/posts/[...id]/index.astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
   const posts = await getPosts()
 
   return posts.map((post) => ({
-    params: { slug: post.slug },
+    params: { id: post.id },
     props: { post }
   }))
 }
