chore: update to nordlys@2.0.1

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -37,7 +37,11 @@ const {
       <slot name="aside" />
     </aside>
 
-    <main id="main" class="mt-6 sm:mt-12" data-pagefind-body={searchable}>
+    <main
+      id="main"
+      class="mt-6 sm:mt-12"
+      data-pagefind-body={searchable ? true : undefined}
+    >
       <Prose class="mb-6 sm:mb-12">
         <slot />
       </Prose>
