add new list to bookshelf

--- a/src/pages/bookshelf.astro
+++ b/src/pages/bookshelf.astro
@@ -4,7 +4,7 @@ import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
 
-const listIds = ['3088', '3087', '3086', '3085']
+const listIds = ['3489', '3088', '3087', '3086', '3085']
 
 const frontmatter: PageLayoutProps['frontmatter'] = {
   title: 'Bookshelf',
