--- a/src/components/BookwyrmList.astro
+++ b/src/components/BookwyrmList.astro
@@ -85,7 +85,7 @@ const bookList = await loadBookwyrmList()
           height={216}
           width={140}
           style="height:216px; width:auto;"
-          class="m-0"
+          class="mt-0 mr-0 mb-0 ml-0"
           alt={`${title} cover`}
         />
       </a>
