--- a/src/components/ProjectsList.astro
+++ b/src/components/ProjectsList.astro
@@ -19,7 +19,7 @@ projects.sort(sortProjects)
       <>
         <li class="pl-0">
           <Project {project} />
-          {index !== projects.length - 1 && <Separator class="mb-6 mt-0" />}
+          {index !== projects.length - 1 && <Separator class="mt-0 mb-6" />}
         </li>
       </>
     ))
