--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -14,11 +14,16 @@ const { frontmatter } = Astro.props
 ---
 
 <BaseLayout frontmatter={frontmatter}>
-  <div id="page-wrapper">
+  <div
+    class="mx-auto flex min-h-[100svh] w-full max-w-[90%] flex-col justify-between md:max-w-3xl"
+  >
     <div class="mt-16 px-4 sm:mt-36 sm:px-12">
       <main id="main">
         {frontmatter.title && <Hero {frontmatter}>{frontmatter.title}</Hero>}
-        <div id="animated-links">
+        <div
+          id="animated-links"
+          class="text-3xl font-semibold tracking-tight text-gray-700/50 sm:text-4xl sm:leading-[46px] dark:text-gray-300/50"
+        >
           <slot />
         </div>
       </main>
@@ -43,10 +48,8 @@ const { frontmatter } = Astro.props
   }
 
   #animated-links {
-    @apply text-3xl font-semibold tracking-tight text-gray-700/50 sm:text-4xl sm:leading-[46px] dark:text-gray-300/50;
-
     a {
-      @apply text-accent;
+      color: rgb(var(--accent));
 
       background-image: linear-gradient(
         transparent calc(85% - 5px),
