--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -16,7 +16,7 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
     <input
       type="text"
       placeholder="Type to search"
-      class="w-full rounded border border-accent p-4 sm:w-[50%]"
+      class="border-accent w-full rounded-sm border p-4 sm:w-[50%]"
     />
     <button id="search-clear" class="clickable invisible text-xl">Clear</button>
   </search-input>
