--- a/src/plugins/ScrollProgressPlugin.astro
+++ b/src/plugins/ScrollProgressPlugin.astro
@@ -1,5 +1,5 @@
 <scroll-progress-bar class="fixed top-0 w-full">
-  <div class="h-1 w-0 bg-accent"></div>
+  <div class="bg-accent h-1 w-0"></div>
 </scroll-progress-bar>
 
 <script>
