--- a/src/plugins/ScrollToTopPlugin.astro
+++ b/src/plugins/ScrollToTopPlugin.astro
@@ -1,12 +1,12 @@
 <scroll-top-button
-  class="!fixed bottom-4 right-4 z-10 hidden pr-2 sm:bottom-8 sm:right-8 lg:bottom-16 lg:right-16"
+  class="fixed! right-4 bottom-4 z-10 hidden pr-2 sm:right-8 sm:bottom-8 lg:right-16 lg:bottom-16"
 >
   <button
     class="clickable flex items-center gap-2"
     title="Scroll to top"
     aria-label="Scroll to top"
   >
-    <span aria-hidden="true" class="iconify text-4xl tabler--arrow-up"></span>
+    <span aria-hidden="true" class="iconify tabler--arrow-up text-4xl"></span>
   </button>
 </scroll-top-button>
 
