--- a/src/style/astro-code.css
+++ b/src/style/astro-code.css
@@ -1,26 +1,36 @@
-@layer components {
-  .astro-code-header {
-    @apply flex h-12 items-center justify-between rounded-tl-md rounded-tr-md border border-accent bg-[--code-header-bg] px-4 text-[--code-header-color] dark:bg-[--code-header-bg-dark] dark:text-[--code-header-color-dark];
+@utility astro-code-header {
+  @apply border-accent flex h-12 items-center justify-between rounded-tl-md rounded-tr-md border bg-(--code-header-bg) px-4 text-(--code-header-color) dark:bg-(--code-header-bg-dark) dark:text-(--code-header-color-dark);
 
-    .label {
-      @apply flex flex-col justify-center text-sm text-[--code-header-color] dark:text-[--code-header-color-dark];
-    }
+  .label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: var(--text-sm);
+    color: var(--code-header-color);
 
-    .copy-btn {
-      @apply iconify cursor-pointer text-2xl tabler--copy;
-    }
-
-    .copy-success {
-      @apply iconify text-2xl tabler--check;
+    html[data-mode='dark'] & {
+      color: var(--code-header-color-dark);
     }
   }
 
-  .astro-code {
-    @apply mt-0 rounded-t-none border border-t-0 border-accent;
+  .copy-btn {
+    @apply iconify tabler--copy cursor-pointer text-2xl;
   }
 
-  html[data-mode='dark'] .astro-code,
-  html[data-mode='dark'] .astro-code span {
+  .copy-success {
+    @apply iconify tabler--check text-2xl;
+  }
+}
+
+@utility astro-code {
+  margin-top: 0;
+  border-color: rgb(var(--accent));
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-width: 1px;
+  border-top-width: 0;
+
+  html[data-mode='dark'] & {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
     font-style: var(--shiki-dark-font-style) !important;
