--- a/src/components/mode/ModeToggle.astro
+++ b/src/components/mode/ModeToggle.astro
@@ -25,5 +25,7 @@
       button.addEventListener('click', handleToggle)
     }
   }
-  customElements.define('dark-light-toggle', DarkLightToggle)
+
+  if (!customElements.get('dark-light-toggle'))
+    customElements.define('dark-light-toggle', DarkLightToggle)
 </script>
