--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -36,7 +36,7 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
 
 <PageLayout {frontmatter}>
   <div slot="top" class="mt-4">
-    <a href="/tags" class="clickable flex w-fit items-center gap-1">
+    <a href="/tags/" class="clickable flex w-fit items-center gap-1">
       <span class="iconify tabler--arrow-left text-xl"></span>
       Back to all tags
     </a>
