--- a/src/plugins/ScrollToTopPlugin.astro
+++ b/src/plugins/ScrollToTopPlugin.astro
@@ -37,5 +37,6 @@
     }
   }
 
-  customElements.define('scroll-top-button', ScrollToTopButton)
+  if (!customElements.get('scroll-top-button'))
+    customElements.define('scroll-top-button', ScrollToTopButton)
 </script>
