--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -13,7 +13,7 @@ const { page } = Astro.props
     <nav class="mb-8 flex w-full grow items-end justify-center">
       <div class="flex gap-4">
         {page.url.prev ? (
-          <a class="clickable" href={page.url.prev}>
+          <a class="clickable" href={`${page.url.prev}/`}>
             Previous
           </a>
         ) : (
@@ -25,7 +25,7 @@ const { page } = Astro.props
         {page.url.next ? (
           <a
             class={!page.url.next ? 'no-underline opacity-25' : 'clickable'}
-            href={page.url.next}
+            href={`${page.url.next}/`}
           >
             Next
           </a>
