--- a/src/components/TagsBar.astro
+++ b/src/components/TagsBar.astro
@@ -11,7 +11,7 @@ const { tags } = Astro.props
 <div class="flex gap-6 text-base">
   {
     tags.map(({ tag, icon }) => (
-      <a class="clickable no-underline" href={`/tags/${tag}`}>
+      <a class="clickable no-underline" href={`/tags/${tag}/`}>
         <span class={`iconify align-middle text-xl ${icon}`} />
         <span class="font-normal">{tag}</span>
       </a>
