fix: pixelfed image hover opacity

--- a/src/layouts/PixelfedLayout.astro
+++ b/src/layouts/PixelfedLayout.astro
@@ -76,7 +76,7 @@ const posts = await loadPosts(frontmatter.pixelfedAccountId)
               data-img-embed
               class="mt-0 mr-0 mb-0 ml-0 rounded-none! border-0! pb-2"
             />
-            <div class="bg-opacity-65 pointer-events-none absolute inset-0 mb-2 flex items-end justify-center bg-black p-2 text-start text-sm text-white opacity-0 transition duration-500 ease-in-out group-hover:opacity-100">
+            <div class="pointer-events-none absolute inset-0 mb-2 flex items-end justify-center bg-black/65 p-2 text-start text-sm text-white opacity-0 transition duration-500 ease-in-out group-hover:opacity-100">
               {post.content}
             </div>
           </div>
