chore: update to nordlys@2.3.0

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,6 @@ import '@fontsource/ibm-plex-sans/latin.css'
 
 import ModeManager from '@/components/mode/ModeManager.astro'
 import CopyCodeButtonsPlugin from '@/plugins/CopyCodeButtonsPlugin.astro'
-import MediumZoomPlugin from '@/plugins/MediumZoomPlugin.astro'
 import config from '@/theme.config'
 import { resolveImageUrl } from '@/util'
 import type { ImageMetadata } from 'astro'
@@ -107,10 +106,14 @@ const openGraphImageUrl = new URL(resolveImageUrl(openGraphImage), Astro.site)
     }
     <ModeManager />
     <ClientRouter />
+    <link href="/zoom-vanilla.js/zoom.css" rel="stylesheet" />
   </head>
   <body>
     <slot />
     <CopyCodeButtonsPlugin />
-    <MediumZoomPlugin />
+    <script
+      is:inline
+      data-astro-rerun
+      src="/zoom-vanilla.js/zoom-vanilla.min.js"></script>
   </body>
 </html>
