--- a/src/layouts/PixelfedLayout.astro
+++ b/src/layouts/PixelfedLayout.astro
@@ -74,6 +74,7 @@ const posts = await loadPosts(frontmatter.pixelfedAccountId)
               width={image.meta.original.width}
               height={image.meta.original.height}
               data-img-embed
+              data-action="zoom"
               class="mt-0 mr-0 mb-0 ml-0 rounded-none! border-0! pb-2"
             />
             <div class="pointer-events-none absolute inset-0 mb-2 flex items-end justify-center bg-black/65 p-2 text-start text-sm text-white opacity-0 transition duration-500 ease-in-out group-hover:opacity-100">
