--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -21,7 +21,7 @@ const { page } = Astro.props
 const frontmatter: PageLayoutProps['frontmatter'] = {
   title: 'Posts',
   activeHeaderLink: 'Blog',
-  canonicalURL: new URL('/posts/1', Astro.site).toString()
+  canonicalURL: new URL('/posts/1/', Astro.site).toString()
 }
 ---
 
