Revert "chore: update to nordlys@2.3.1"
This reverts commit 3d26fad344040a3e77501775a8c0ee13cffd7444.

--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -27,7 +27,7 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
 <PageLayout {frontmatter}>
   <h1>
     {frontmatter.title}
-    {page.currentPage > 1 && <span>{` (page ${page.currentPage})`}</span>}
+    <span>{` (page ${page.currentPage})`}</span>
   </h1>
   <PostsList posts={page.data} />
 
