--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -1,17 +1,17 @@
 ---
 import Pagination from '@/components/Pagination.astro'
-import ProjectsList from '@/components/ProjectsList.astro'
+import PostsList from '@/components/PostsList.astro'
 import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
 import config from '@/theme.config'
-import { getProjects } from '@/util/projects'
+import { getPosts } from '@/util/posts'
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro'
 
 export const getStaticPaths = (async ({ paginate }) => {
-  const projects = await getProjects()
+  const posts = await getPosts()
 
-  return paginate(projects, { pageSize: config.projectsPerPage })
+  return paginate(posts, { pageSize: config.postsPerPage })
 }) satisfies GetStaticPaths
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>
@@ -19,17 +19,17 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>
 const { page } = Astro.props
 
 const frontmatter: PageLayoutProps['frontmatter'] = {
-  title: 'Projects',
-  activeHeaderLink: 'Projects'
+  title: 'Posts',
+  activeHeaderLink: 'Blog',
+  canonicalURL: new URL('/posts/1/', Astro.site).toString()
 }
 ---
 
 <PageLayout {frontmatter}>
   <h1>
     {frontmatter.title}
-    <span>{` (page ${page.currentPage})`}</span>
   </h1>
-  <ProjectsList projects={page.data} />
+  <PostsList posts={page.data} />
 
   <Pagination slot="bottom" page={page} />
 </PageLayout>
