--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -20,14 +20,14 @@ const { page } = Astro.props
 
 const frontmatter: PageLayoutProps['frontmatter'] = {
   title: 'Projects',
-  activeHeaderLink: 'Projects'
+  activeHeaderLink: 'Projects',
+  canonicalURL: new URL('/projects/1', Astro.site).toString()
 }
 ---
 
 <PageLayout {frontmatter}>
   <h1>
     {frontmatter.title}
-    <span>{` (page ${page.currentPage})`}</span>
   </h1>
   <ProjectsList projects={page.data} />
 
